refactor : 자바 버전 변경으로 인한 코드 변경